# robust-whisper-trainer

./: .gitignore  README.md  pyproject.toml
examples/: config.json  preprocess_data.py  run_training.sh  train_robust_whisper.py  use_robust_encoder.py
notebooks/: augmentations.ipynb
src/robust_whisper_trainer/: __init__.py  audio_augmenter.py  cli.py  data_preprocessor.py  datasets.py  loss_computer.py  model_wrapper.py  training_harness.py
tests/: test_loss_computer.py
